add loan impl | add publisher in book
