# spring-boot-library-app/src/main/kotlin/com/ensicaen/springbootlibrary/book/BookEntity.kt
@@ -2,14 +2,16 @@ package com.ensicaen.springbootlibrary.book
 
 import com.ensicaen.openapi.springbootlibrary.api.BookState
 import com.ensicaen.springbootlibrary.entity.AbstractJpaPersistable
-import javax.persistence.Entity
+import com.ensicaen.springbootlibrary.publisher.PublisherEntity
+import javax.persistence.*
 import javax.persistence.EnumType.STRING
-import javax.persistence.Enumerated
-import javax.persistence.Table
 
 @Entity
 @Table(name = "book")
 class BookEntity(
     var title: String,
-    @Enumerated(STRING) var state: BookState
+    @Enumerated(STRING) var state: BookState,
+    @ManyToOne
+    @JoinColumn(name = "publisher_id", nullable = false)
+    var publisher: PublisherEntity
 ) : AbstractJpaPersistable()
